update seo thingy

--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doofs – Free subdomains for developers</title>
-    <meta name="description" content="Launch side projects, bots, APIs, and demos on doofs.tech. Free subdomains with DNS control — no credit card required." />
-    <meta name="author" content="Doofs" />
-    <link rel="canonical" href="https://doofs.tech" />
 
-    <meta property="og:title" content="Doofs – Free subdomains for developers" />
-    <meta property="og:description" content="Launch side projects, bots, APIs, and demos on doofs.tech. Free subdomains with DNS control — no credit card required." />
+    <title>doofs | free domains for developers</title>
+    <meta
+      name="description"
+      content="Launch side projects, bots, APIs, and demos on doofs.tech. Free subdomains with DNS control — no credit card required."
+    />
+    <meta name="author" content="doofs" />
+
+    <link rel="canonical" href="https://domain.doofs.tech/" />
+
+    <link rel="icon" href="/doofs.tech-lightmode-logo.ico" media="(prefers-color-scheme: light)" />
+    <link rel="icon" href="/doofs.tech-darkmode-logo.ico" media="(prefers-color-scheme: dark)" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="doofs | free domains for developers" />
+    <meta
+      property="og:description"
+      content="Launch side projects, bots, APIs, and demos on doofs.tech. Free domains with DNS control — no credit card required."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://doofs.tech" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://domain.doofs.tech/" />
+    <meta property="og:image" content="https://domain.doofs.tech/og.png" />
+    <!-- Optional but recommended -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Doofs – Free subdomains for developers" />
-    <meta name="twitter:description" content="Free subdomains with DNS control for developers. No credit card required." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="doofs.tech | free domains for developers" />
+    <meta
+      name="twitter:description"
+      content="Free domains with DNS control for developers. No credit card required."
+    />
+    <meta name="twitter:image" content="https://domain.doofs.tech/og.png" />
   </head>
 
   <body>
