update .gitignore and add Open Graph meta tag. resize og.png to 1200x630

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="/doofs.tech-darkmode-logo.ico" media="(prefers-color-scheme: dark)" />
 
     <!-- Open Graph / Facebook -->
+    <meta property="fb:app_id" content="885834933923726" />
     <meta property="og:title" content="doofs | free domains for developers" />
     <meta
       property="og:description"
