--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-title" content="doofs" />
     
     <!-- PWA: Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     
     <!-- PWA: Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/pwa/icon-192x192.png" />
